@@ -79,6 +79,7 @@ class CAction extends CZBXAPI{
 			'search'				=> null,
 			'startSearch'			=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'=> null,
 
 // OutPut
 			'extendoutput'			=> null,
