@@ -76,6 +76,7 @@ class CHistory extends CZBXAPI{
 			'search'					=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
+			'searchWildcardsEnabled'	=> null,
 
 			'time_from'				=> null,
 			'time_till'				=> null,
