@@ -69,6 +69,7 @@ class CImage extends CZBXAPI{
 			'search'				=> null,
 			'startSearch'			=> null,
 			'excludeSearch'			=> null,
+			'searchWildcardsEnabled'=> null,
 
 // OutPut
 			'output'				=> API_OUTPUT_REFER,
